data/derived/sp14/progs/unify/prog3827.ml.out
Characters 30-42:
  let fixpoint (f,b) = wwhile ( (b, b<>f(b)) ,b);;
                                ^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c -> 'c * bool
